ola-parser/src/testdata/syntaxTests/globalFunctions/suicide_no_call.sol
contract C
{
	fn f(bytes memory data)  {
		suicide;
	}
}
// ----
// TypeError 8050: (60-67): "suicide" has been deprecated in favour of "selfdestruct".
